2019-11-07  Feng Xue <fxue@os.amperecomputing.com>

	PR tree-optimization/89134
	* doc/invoke.texi (min-loop-cond-split-prob): Document new --params.
	* params.def: Add min-loop-cond-split-prob.
	* tree-ssa-loop-split.c (split_loop): Remove niter parameter, move some
	outside checks on loop into the function.
	(split_info): New class.
	(find_vdef_in_loop, get_control_equiv_head_block): New functions.
	(find_control_dep_blocks, vuse_semi_invariant_p): Likewise.
	(ssa_semi_invariant_p, loop_iter_phi_semi_invariant_p): Likewise.
	(control_dep_semi_invariant_p, stmt_semi_invariant_p_1): Likewise.
	(stmt_semi_invariant_p, branch_removable_p): Likewise.
	(get_cond_invariant_branch, compute_added_num_insns): Likewise.
	(get_cond_branch_to_split_loop, do_split_loop_on_cond): Likewise.
	(split_loop_on_cond): Likewise.
	(tree_ssa_split_loops): Add loop split on conditional statement.

2019-11-07  Andreas Krebbel  <krebbel@linux.ibm.com>

	* config/s390/s390.md ("*cstorecc<mode>_z13"): New insn_and_split
	pattern.

2019-11-07  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92405
	* tree-vect-loop.c (vectorizable_reduction): Appropriately
	restrict lane-reducing ops to single stmt chains.

2019-11-07  Martin Jambor  <mjambor@suse.cz>

	PR lto/70929
	* cif-code.def (MISMATCHED_ARGUMENTS): Removed.
	* cgraph.h (gimple_check_call_matching_types): Remove
	* cgraph.c (gimple_check_call_args): Likewise.
	(gimple_check_call_matching_types): Likewise.
	(symbol_table::create_edge): Do not call
	gimple_check_call_matching_types.
	(cgraph_edge::make_direct): Likewise.
	(cgraph_edge::redirect_call_stmt_to_callee): Likewise.
	* value-prof.h (check_ic_target): Remove.
	* value-prof.c (check_ic_target): Remove.
	(gimple_ic_transform): Do nat call check_ic_target.
	* auto-profile.c (function_instance::find_icall_target_map): Likewise.
	(afdo_indirect_call): Likewise.
	* ipa-prop.c (update_indirect_edges_after_inlining): Do not call
	gimple_check_call_matching_types.