@@ -1,3 +1,7 @@
+2019-11-07  Jan Hubicka  <hubicka@ucw.cz>
+
+	* lto.c (do_whole_program_analysis): Call lto_free_file_name_hash.
+
 2019-11-02  Jan Hubicka  <hubicka@ucw.cz>
 
 	* lto-common.c (read_cgraph_and_symbols): Improve -Q reporting.
